# tracefold

./: .gitattributes  .gitignore  .vercelignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml
benches/: corpora.toml
contracts/: telemetry-v1.toml
crates/tracefold-archive/: Cargo.toml
crates/tracefold-archive/src/: codec.rs  lib.rs  raw_codec.rs  reader.rs  writer.rs
crates/tracefold-bench/: Cargo.toml
crates/tracefold-bench/src/: lib.rs
crates/tracefold-cli/: Cargo.toml
crates/tracefold-cli/src/: main.rs
crates/tracefold-core/: Cargo.toml
crates/tracefold-core/src/: aggregate.rs  contract.rs  generator.rs  lib.rs  normalize.rs  schema.rs
paper/: CITATION.cff  references.bib
results/: paper.md  summary.md
results/site-data/: methodology.json  publication.json  summary.json
results/site-data/raw/: bgl.jsonl  public.jsonl  smoke.jsonl  zookeeper.jsonl
results/site-data/tables/: primary.json
scripts/: reproduce-public.sh  reproduce-smoke.sh
scripts/report/: pyproject.toml
scripts/report/src/tracefold_report/: __init__.py  baselines.py  charts.py  cli.py  model.py  paper.py  report.py  stats.py
scripts/report/tests/: test_report.py
site/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
site/scripts/: sync-results.mjs
site/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/src/app/data/: page.tsx
site/src/app/paper/: page.tsx
site/src/app/reproduce/: page.tsx
site/src/components/: MetricCard.tsx  ResultExplorer.test.tsx  ResultExplorer.tsx  SiteNav.tsx
site/src/lib/: results.ts
site/tests/e2e/: site.spec.ts
