[workspace]
resolver = "2"
members = [
  "crates/tracefold-core",
  "crates/tracefold-archive",
  "crates/tracefold-bench",
  "crates/tracefold-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nearlynamed/tracefold"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.5"
hex = "0.4.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.8"
wait-timeout = "0.2.1"
zstd = "0.13.3"

[profile.release]
lto = "thin"
codegen-units = 1

