[package]
name = "tracefold-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracefold-core = { path = "../tracefold-core" }
zstd.workspace = true

[dev-dependencies]
rand.workspace = true

