[package]
name = "tracefold-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
tracefold-archive = { path = "../tracefold-archive" }
tracefold-core = { path = "../tracefold-core" }
wait-timeout.workspace = true
zip.workspace = true
zstd.workspace = true
