[package]
name = "tracefold-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "tracefold"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracefold-archive = { path = "../tracefold-archive" }
tracefold-bench = { path = "../tracefold-bench" }
tracefold-core = { path = "../tracefold-core" }
zstd.workspace = true
