[project]
name = "tracefold-report"
version = "0.1.0"
description = "Reproducible TraceFold benchmark reporting and paper generation"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.4.4",
  "matplotlib==3.10.8",
  "numpy==2.4.1",
  "zstandard==0.25.0",
]

[project.scripts]
tracefold-report = "tracefold_report.cli:main"
tracefold-baselines = "tracefold_report.baselines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracefold_report"]

